Evolution #144: Info sur profil (et groupe)
Données en places.

--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -25,6 +25,26 @@
     
   <h2>{{ group.name }}</h2>
   
+  <p class="show_info">
+    {% if count_owned != 0 %}
+    {{ 'show.user.elements.count'|trans({
+      '%count_owned%' : count_owned,
+      '%count_favorited%': count_favorited,
+      '%count_favorited_users%': count_favorited_users
+    }, 'elements') }}
+    {% else %}
+      {{ 'show.user.elements.no_count'|trans({}, 'elements') }}
+    {% endif %}
+    <br />
+    {% if count_followers > 1 %}
+      {{ 'show.user.followers.x_count'|trans({'%count%':count_followers, '%name%':group.name }, 'elements') }}
+    {% elseif count_followers == 0 %}
+      {{ 'show.user.followers.zero_count'|trans({'%name%':group.name }, 'elements') }}
+    {% else %}
+      {{ 'show.user.followers.one_count'|trans({'%count%':count_followers, '%name%':group.name }, 'elements') }}
+    {% endif %}
+  </p>
+  
   <p class="group_description">
     {{ group.description }}
   </p>
