--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -1006,3 +1006,18 @@ div.comments_loader
 }
 
 /* END commentaires */
+
+/* Ajouter tag d'élément a ses tags favoris */
+
+li.element a.tag_to_favorites
+{
+  margin-left: -15px;
+  margin-right: 4px;
+}
+
+li.element a.element_tag_large_for_fav
+{
+  padding-right: 15px;
+}
+
+/* END Ajouter tag d'élément a ses tags favoris */
