Evolution #107: Evolution ergonomiques
Proposition de diffuser l'élément ajouté dans un groupe si un de ses tags correspond
a un des groupe administré par l'utilisateur.

--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -1021,3 +1021,11 @@ li.element a.element_tag_large_for_fav
 }
 
 /* END Ajouter tag d'élément a ses tags favoris */
+
+div#added_element_to_group
+{
+  background-color: #E3F6FD;
+  padding: 20px;
+  font-size: 115%;
+  font-weight: bold;
+}
