--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -22,6 +22,19 @@
     </form>
   </div>
 
+  <div id="added_element_to_group" style="display: none;">
+    <img class="loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
+    <p class="help">
+      {{ 'element_add.added_to_group.sentence'|trans({}, 'userui') }}
+    </p>
+    <ul id="groups_to_add_element"></ul>
+    <p class="cancel">
+      <a href="" class="cancel">
+        {{ 'element_add.added_to_group.nothanks'|trans({}, 'userui') }}
+      </a>
+    </p>
+  </div>
+
   <a href="#" id="element_add_link" class="button">
     {{ 'home.add_element'|trans({}, 'navigationui') }} &gt;&gt;
   </a>
