--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -61,6 +61,12 @@
         <img src="{{ asset('bundles/muzichcore/img/1324917097_link.png') }}" alt="link" />
       </a>
       
+      <a title="{{ 'element.report.link_title'|trans({}, 'userui') }}" 
+        class="element_report" 
+        href="{{ path('ajax_report_element', {'element_id':element.id, 'token':app.user.getPersonalHash}) }}">
+        <img src="{{ asset('bundles/muzichcore/img/1331832708_comment_alert.png') }}" alt="report" />
+      </a>
+      
       {% if app.user.id == element.owner.id %}
         <a title="{{ 'element.edit.link'|trans({}, 'elements') }}" class="element_edit_link" 
            href="{{ path('element_edit', {'element_id' : element.id})  }}" style="display: none;"
