--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -1039,3 +1039,16 @@ div#added_element_to_group
   font-size: 115%;
   font-weight: bold;
 }
+
+input.intext
+{
+  border: none;
+  border-bottom-color: #000;
+  border-bottom-style: dashed;
+  border-bottom-width: 1px;
+  width: 110px;
+  text-align: center;
+  margin-left: 15px;
+  margin-right: 15px;
+  font-weight: bold;
+}
