--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -53,6 +53,8 @@
     url_add_tag = "{{ path('ajax_add_tag') }}";
     url_element_new_count = "{{ path('element_new_count') }}";
     url_element_new_get = "{{ path('element_new_get') }}";
+    
+    url_img_ajax_loader = "{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}";
   </script>
   {% block js %}{% endblock %}
   
