--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -4,7 +4,7 @@
   position: relative;
   min-height: 100%;
   padding-bottom: 30px;
-  
+  min-height: 120px;
   
   width: 640px;
   margin-top: 45px;
