--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -220,7 +220,9 @@
     >
       {% include "MuzichCommentBundle:Comment:form.html.twig" with {
         'submit_value' : 'element.comments.add_submit'|trans({}, 'elements'),
-        'cancel_value' : 'element.comments.add_cancel'|trans({}, 'elements')
+        'cancel_value' : 'element.comments.add_cancel'|trans({}, 'elements'),
+        'following'    : element.userFollowComments(app.user.id),
+        'own'          : (app.user.id == element.owner.id)
       } %}
     </form>
       
