Evolution #163: Evenements: Prise en comptes des autres facteurs
Prise en compte utilisateur qui suis.

--- a/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
@@ -34,7 +34,7 @@
     <b>{{ 'followed_by'|trans({}, 'network') }}</b>
     <ul id="followers_users" class="inline">
     {% for user in followers_users %} 
-      <li>
+      <li {% if user.hasLiveData('new', true) %}class="new"{% endif %}>
         <a href="{{ path('show_user', { 'slug': user.slug }) }}">{{ user.username }}</a>
       </li>
     {% endfor %}
