Evolution #172: Pages d'info: onglet hightlight
Variable par defaut passé a null.

--- a/src/Muzich/CoreBundle/Resources/views/Info/about.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Info/about.html.twig
@@ -4,7 +4,7 @@
 
 {% block main_content %}
 
-  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with {'active': 'myfavorites'} %}
+  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with {'active': null} %}
 
   <h1>Découvrez et partagez la musique d'internet</h1>
 
