--- a/src/Muzich/CoreBundle/Resources/views/Info/sites.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Info/sites.html.twig
@@ -4,7 +4,7 @@
 
 {% block main_content %}
 
-  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with {'active': 'myfavorites'} %}
+  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with {'active': null} %}
 
   <h1>Liste des sites supportés</h1>
 
