Evolution #177: Garder ma session active

--- a/src/Muzich/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Security/login.html.twig
@@ -12,7 +12,7 @@
 
       <br />
       <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-      <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
+      <label for="remember_me">{{ 'login.remember_me.label'|trans({}, 'userui') }}</label>
 
       <input type="submit" class="button" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
   </form>
